src/test/ui/const-generics/defaults/trait_objects_fail.stderr
error[E0277]: the trait bound `u32: Trait` is not satisfied
  --> $DIR/trait_objects_fail.rs:28:9
   |
LL |     foo(&10_u32);
   |     --- ^^^^^^^ the trait `Trait` is not implemented for `u32`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following implementations were found:
             <u32 as Trait<2_u8>>
   = note: required for the cast to the object type `dyn Trait`

error[E0277]: the trait bound `bool: Traitor<{_: u8}, {_: u8}>` is not satisfied
  --> $DIR/trait_objects_fail.rs:30:9
   |
LL |     bar(&true);
   |     --- ^^^^^ the trait `Traitor<{_: u8}, {_: u8}>` is not implemented for `bool`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following implementations were found:
             <bool as Traitor<2_u8, 3_u8>>
   = note: required for the cast to the object type `dyn Traitor<{_: u8}, {_: u8}>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
